pod-definition.yml
apiVersion: v1
kind: Pod
metadata:
  name: sample-pod
  labels:
    app: sample-app
spec:
  containers:
    - name: sample-container
      image: nginx:latest
      ports:
        - containerPort: 80
